--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -4,3 +4,8 @@
     background-repeat: no-repeat;
     
   }
+  html .parent-container .container_form .container_form_ar{
+    font-size: x-large;
+    
+
+  }
