--- a/src/components/thank/thank.css
+++ b/src/components/thank/thank.css
@@ -96,6 +96,7 @@
 
   .wave {
     width: 100%; /* Prend la largeur totale de l'écran */
+    position: absolute; /* Position absolue par rapport à son conteneur */
     bottom: 0; /* Position en bas du conteneur */
   }
 
