--- a/src/components/thank/thankAr.css
+++ b/src/components/thank/thankAr.css
@@ -4,6 +4,7 @@
      padding-top: 2px;
      padding-bottom: 11px;
      direction: rtl;
+     
      }
      
    
@@ -67,7 +68,19 @@
        
      }
    
-   
+   .card .wave{
+    top: 2rem;
+    position: absolute;
+    z-index: 1;
+   }
+
+   .card .text {
+    position: absolute;
+    top: 0;
+    z-index: 2;
+    
+   }
+
      
    
      /*      media queries(medium devices)    */
@@ -134,6 +147,12 @@
     margin-right: 1rem; /* Ajoute une marge à droite */
     margin-top: 1rem; /* Ajoute une marge en haut */
     padding: 1rem; /* Ajoute un padding */
+    bottom: 10rem;
+    position: relative;
+    top: 7rem;
+  }
+  .card .text{
+    
   }
 
   .wave {
@@ -158,7 +177,7 @@
   }
   .container_logo_ar{
     padding-bottom: 25rem;
-    padding-top: 70px
+    padding-top: 0
   }
   .container_logo_ar .craft{
     top: 300px;
@@ -166,6 +185,13 @@
   .container_logo_ar .wave{
     bottom: 400px; /* Position en bas du conteneur */
 
+  }
+  .card .wave{
+top: 200px;
+  }
+
+  .card .text{
+top: 0px;
   }
 }
 
