--- a/src/components/thank/thank.css
+++ b/src/components/thank/thank.css
@@ -9,7 +9,7 @@
 
   .map {
     grid-column: 2; /* Colonne de droite */
-    grid-row: span 2; /* S'étend sur deux rangées */
+    grid-row: 2; /* S'étend sur deux rangées */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -39,16 +39,6 @@
     margin-bottom: 0;
   }
 
-  .craft{
-    font-family: Bold;
-    font-size: 220px;
-    top: 90px;
-    position: absolute; /* Utilisez une position absolue pour positionner la deuxième image */
-    z-index: 0;
-    color: #1c1b1b;
-    opacity: 0.5;
-  }
-
   .card{
     font-family: Medium;
     margin-bottom: 4.5rem;    
@@ -67,7 +57,9 @@
     
   }
 
-
+.card .wave{
+  left: 0;
+}
   
 
   /*      media queries(medium devices)    */
@@ -95,32 +87,15 @@
   }
 
   .wave {
-    width: 100%; /* Prend la largeur totale de l'écran */
+    width: 110%; /* Prend la largeur totale de l'écran */
     position: absolute; /* Position absolue par rapport à son conteneur */
     bottom: 0; /* Position en bas du conteneur */
   }
-
-  .container_logo .craft {
-    font-size: 70px; /* Réduit la taille de la police */
-    top: 50px; /* Ajuste la position verticale */
-    padding-top: 20px;
-  }
-
-  .card h1 {
-    font-size: 2rem; /* Réduit la taille du titre h1 */
-    line-height: 1.2;
-  }
-
-  .card p {
-    padding-bottom: 20px; /* Réduit l'espacement en bas du paragraphe */
-  }
   .container_logo{
     padding-bottom: 25rem;
-    padding-top: 70px
+   
   }
-  .container_logo .craft{
-    top: 300px;
-  }
+
   .container_logo .wave{
     bottom: 400px; /* Position en bas du conteneur */
 
@@ -128,9 +103,23 @@
   .card .wave{
     top: 200px;
       }
+   
     
       .card .text{
     top: 0px;
+    position: absolute;
+    bottom: 10rem;
+      }
+      .card .text p{
+        top: 0;
+        padding-bottom: 20px; /* Réduit l'espacement en bas du paragraphe */
+
+
+      }
+
+      .card .text h1{
+        font-size: 1.8rem; /* Réduit la taille du titre h1 */
+        line-height: 1.2;
       }
 }
 
